# rusota

./: .env  Cargo.toml  Dockerfile  Makefile  readme.md
.github/workflows/: release.yml
src/: main.rs  otamanager.rs  package.rs
templates/: index.html.tera
