[package]
name = "rusota"
version = "0.1.0"
edition = "2021"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
dotenv = { version = "0.15.*" }
env_logger = { version = "0.10" }
log = { version = "0.4" }
md-5 = { version = "0.10.5" }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
serde = { version = "1.0.152", features = ["derive"] }
strum = { version = "0.24" }
strum_macros = { version = "0.24" }
notify = { version = "5" }
futures = { version = "0.3" }
